# spanisheo-bot

./: .gitignore  Cargo.toml  README.md
src/: dictionary.rs  main.rs  telegram_message_parser.rs
