[package]
name = "spanisheo-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.117", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3"
